--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="/login">로그인</a>
-  <a href="/signup">회원가입</a>
+  <a href="/signup">회원가입</a> <br><br>
+  <a href="/logout">로그아웃</a>
 </body>
 </html>
