--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,9 @@
 <body>
   <a href="/login">로그인</a>
   <a href="/signup">회원가입</a> <br><br>
-  <a href="/logout">로그아웃</a>
+  <a href="/logout">로그아웃</a> <br><br>
+  {{userdata}}
+  <br>
+  <a href="/numberGame">숫자게임</a>
 </body>
 </html>
