--- a/views/numberGame.hbs
+++ b/views/numberGame.hbs
@@ -10,7 +10,7 @@
 </head>
 <body>
   {{userdata}}
-  <p class="money">현재 자금 : </p>
+  <p class="money">현재 자금 : {{money}}</p>
   <div class="number">0</div>
   <div class="batting">
     <input type="text" placeholder="돈을 입력해주세요 최소 5000원">
